# vibecon

./: .gitignore  README.md  TODO.MD  next.config.ts  package-lock.json  package.json  vercel.json
api/: .cache  README.md  main.py  models.py  prompts.py  pyproject.toml
api/routers/: db.py  spotify.py  vibe.py
api/routers/auth/: auth.py  spotify_auth.py
api/utils/: image_nn.py  model_loader.py
backend/: .cache  main.py  models.py  pyproject.toml  utils.py
backend/routers/: spotify.py  vibe.py
data/: data.ts
recommender/nn/: training.ipynb  vibe_priors_by_scene_class.json
src/app/: globals.css  layout.tsx  page.tsx  types.ts
src/app/components/: LiveCam.tsx  MusicPlayer.tsx  Spin.tsx  VibeCard.tsx  VibeSummary.tsx  VibeViz.tsx
src/app/components/vibe_card/: ExportVibeCard.tsx  VibeDataDisplay.tsx  VibeSummaryDisplay.tsx
src/app/home/: page.tsx
src/app/hooks/: useAuthRedirect.ts  useSpotifyPlayer.ts  useTrackRecommendation.ts  useVibe.ts
src/app/test/: page.tsx
