[project]
name = "vibecon"
version = "0.1.0"
description = ""
authors = [
    {name = "Anand Krishnakumar ",email = "anandkrishnakumar123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "spotipy (>=2.25.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
